--- a/HYOJ-BetterUI.user.css
+++ b/HYOJ-BetterUI.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           HYOJ-BetterUI
-@namespace      github.com/fidelxyz/HYOJ-stylus
-@version        0.0.1-beta1-dev20210915.1
+@namespace      github.com/fidelxyz/HYOJ-BetterUI
+@version        0.0.1-beta1-dev20210915.2
 @description    A userstyle for HYOJ
 @author         Fidel Yin
 ==/UserStyle== */
@@ -11,45 +11,6 @@
         margin: 0 !important;
         list-style: none;
         width: fit-content !important;
-    }
-
-    .navbar-nav .nav-link {
-        padding-right: 0;
-        padding-left: 0;
-    }
-
-    .navbar-nav .dropdown-menu {
-        position: static;
-    }
-
-    .navbar-text {
-        padding-top: 0.5rem;
-        padding-bottom: 0.5rem;
-    }
-
-    .navbar-toggler:hover {
-        text-decoration: none;
-    }
-
-    .navbar-toggler:focus {
-        text-decoration: none;
-        outline: 0;
-        box-shadow: 0 0 0 0.2rem;
-    }
-
-    .navbar-toggler-icon {
-        display: inline-block;
-        width: 1.5em;
-        height: 1.5em;
-        vertical-align: middle;
-        background-repeat: no-repeat;
-        background-position: center;
-        background-size: 100%;
-    }
-
-    .navbar-nav-scroll {
-        max-height: var(--bs-scroll-height, 75vh);
-        overflow-y: auto;
     }
 
     .navbar .container-fluid {
@@ -558,13 +519,25 @@
         box-shadow: inset 0 0 0 1px transparent, inset 0 0 0 0 rgb(34 36 38 / 15%);
         outline: none;
     }
+
+    .label {
+        font-size: .78571429rem;
+        padding: .5833em .833em;
+        margin: 2px;
+        border-radius: .28571429rem;
+    }
 }
 
-@-moz-document regexp(".*8\\.134\\.85\\.70/oj/loginpage\\.php.*") {
+@-moz-document regexp(".*8\\.134\\.85\\.70/.*/loginpage\\.php.*") {
+    #broadcast {
+        display: none;
+    }
+
     .jumbotron {
         width: auto;
         max-width: 450px;
         padding: 1rem 1rem 0 !important;
+        margin-top: 7rem;
         margin-bottom: 2rem;
         box-shadow: 0 1px 2px 0 var(--theme-shadow);
         border-radius: .28571429rem !important;
@@ -608,7 +581,60 @@
     }
 }
 
-@-moz-document regexp(".*8\\.134\\.85\\.70/oj/problemset\\.php.*") {
+@-moz-document regexp(".*8\.134\.85\.70/.*/registerpage\.php.*") {
+    #broadcast {
+        display: none;
+    }
+
+    .jumbotron {
+        width: auto;
+        max-width: 450px;
+        padding: 1rem 1rem 0 !important;
+        margin-top: 7rem;
+        margin-bottom: 2rem;
+        box-shadow: 0 1px 2px 0 var(--theme-shadow);
+        border-radius: .28571429rem !important;
+        border: 1px solid rgba(34, 36, 38, .15) !important;
+    }
+
+    .form-horizontal .form-group {
+        margin: 0;
+    }
+
+    .form-horizontal .form-group .control-label {
+        display: none;
+    }
+
+    .form-horizontal .form-group > div {
+        float: none;
+        padding: 0;
+        width: 100%;
+        margin: 0 0 1rem;
+    }
+
+    .form-horizontal .form-group button {
+        line-height: 1;
+        padding: .78571429em 1.5em;
+    }
+
+    .form-horizontal .form-group div:last-child button {
+        line-height: 1;
+        padding: .78571429em 1.5em;
+        /*         font-weight: 400; */
+        font-size: 1rem;
+        color: var(--theme-button-foreground) !important;
+        background-color: var(--theme-button-background) !important;
+        border-color: var(--theme-button-background) !important;
+        transition: opacity .1s ease, background-color .1s ease, color .1s ease, box-shadow .1s ease, background .1s ease;
+    }
+
+    .form-horizontal .form-group div:last-child button:hover {
+        background-color: var(--theme-button-background-hover) !important;
+        border-color: var(--theme-button-background-hover) !important;
+    }
+}
+
+@-moz-document regexp(".*8\\.134\\.85\\.70/.*/problemset\\.php.*") {
     .jumbotron {
         border: none !important;
         box-shadow: none;
@@ -707,11 +733,338 @@
     #problemset td:nth-child(4) > div {
         text-align: right;
     }
+}
 
-    .label {
-        font-size: .78571429rem;
-        padding: .5833em .833em;
-        margin: 2px;
+@-moz-document regexp(".*8\\.134\\.85\\.70/.*/problem\\.php.*") {
+    #broadcast {
+        display: none;
+    }
+
+    .container > .panel-default {
+        margin-top: 7rem;
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .container > .panel-default > .panel-body {
+        width: calc(100% - 260px - 1rem);
+        margin-top: 1rem;
+        padding-right: 1rem;
+    }
+
+    .container > .panel-default > center {
+        width: calc(260px + 1rem);
+    }
+
+    .container > .panel-default > .panel-body:before {
+        position: absolute;
+        content: "";
+        width: 100%;
+        border-top: 1px solid var(--theme-border);
+        left: 0;
+        margin-top: -1rem;
+    }
+
+    .panel {
+        border: none;
+        box-shadow: none;
+    }
+
+    .panel-heading,
+    .panel-body {
+        padding: 0;
+    }
+
+    .panel-default > .panel-heading {
+        background: none !important;
+        width: 100%;
+        border: none;
+    }
+
+    .container > .panel-default > .panel-heading {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .container > .panel-default > .panel-heading > center:nth-child(2) {
+        float: left;
+    }
+
+    .container > .panel-default > .panel-heading > div:nth-child(3) {
+        float: right;
+        width: fit-content;
+        margin: auto 0 0 auto;
+        padding: .5rem;
+    }
+
+    .container > .panel-default > .panel-heading > div:nth-child(3) > sub {
+        font-size: 1rem;
+        bottom: 0;
+    }
+
+    .container > .panel-default > .panel-heading > center:nth-child(4) {
+        clear: both;
+        display: flex;
+        font-size: 1.25rem;
+        width: 100%;
+    }
+
+    .container > .panel-default > .panel-heading > center:nth-child(4) > span > span:after {
+        content: '\00A0'
+    }
+
+    .container > .panel-default > .panel-heading > center:nth-child(4) > span:nth-child(1),
+    .container > .panel-default > .panel-heading > center:nth-child(4) > span:nth-child(3) {
+        display: none;
+    }
+
+    .container > .panel-default > .panel-heading > center:nth-child(4) > .btn {
+        display: none;
+    }
+
+    .container > .panel-default > .panel-heading > center:nth-child(4) > .btn-group {
+        margin-left: auto;
+    }
+
+    .container > .panel-default > .panel-heading > center:nth-child(4) > .btn-group > .btn {
+        background: none;
+        color: var(--theme-foreground);
+        border: none;
+        border-radius: 0;
+        box-shadow: none;
+        font-size: 1rem;
+        transition: background .1s ease;
+        text-shadow: none;
+    }
+
+    .container > .panel-default > .panel-heading > center:nth-child(4) > .btn-group > .btn:hover {
+        color: var(--theme-foreground);
+        background: var(--theme-menu-item-hover-background);
+        z-index: unset;
+    }
+
+    .panel-heading h3 {
+        font-size: 2rem;
+        font-weight: 700;
+    }
+
+    .panel-heading h3:before {
+        content: "#";
+    }
+
+    .panel-body .panel-heading {
+        margin: calc(2rem - .14286em) 0 1rem;
+        padding: 0;
+    }
+
+    .panel-body .panel-body {
+        padding: 0;
+        line-height: 2;
+    }
+
+    .panel-body h1,
+    .panel-body h2,
+    .panel-body h3,
+    .panel-body h4 {
+        font-weight: 700;
+        color: var(--theme-foreground);
+    }
+
+    .panel-body h4 {
+        font-size: 1.71428571em;
+    }
+
+    pre {
+        border: 1px solid var(--theme-border);
         border-radius: .28571429rem;
+        background: none;
+        box-shadow: 0 1px 2px 0 var(--theme-shadow);
+        font-size: 14px;
+        padding: 1em;
+    }
+
+    .panel-body .panel-heading a {
+        color: var(--theme-button-foreground);
+        background: var(--theme-button-background);
+        padding: .5833em .833em;
+        font-size: .78571429rem;
+        border-radius: .28571429rem;
+        margin: -.29165em 0 1em -.5rem;
+        vertical-align: middle;
+        position: relative;
+        cursor: pointer;
+        transition: background .1s ease, color .2s ease;
+        text-decoration: none;
+        float: right;
+    }
+
+    .panel-body .panel-heading a:hover {
+        text-decoration: none;
+        background: var(--theme-button-background-hover);
+        color: var(--theme-button-foreground-hover);
+    }
+
+    .panel-body .panel-heading a:before {
+        border-width: 0 1px 1px 0;
+        right: auto;
+        transform: translateX(-50%) translateY(-50%) rotate(45deg);
+        top: 100%;
+        left: 50%;
+        background-color: inherit;
+        background-image: inherit;
+        border: 0 solid;
+        border-color: inherit;
+        position: absolute;
+        content: "";
+        z-index: 2;
+        width: .6666em;
+        height: .6666em;
+        transition: none;
+    }
+
+    .panel-footer {
+        background: none;
+        display: flex;
+        flex-direction: column;
+        border: none;
+        padding: 3rem 0 0 1rem;
+        align-self: start;
+        position: -webkit-sticky;
+        position: sticky;
+        top: 87px;
+    }
+
+    .panel-footer .btn {
+        box-shadow: none;
+        border: none;
+        border-radius: unset;
+        text-align: left;
+        font-size: 1rem;
+        text-shadow: none;
+        padding: .85714286em 1.14285714em;
+        line-height: 1;
+        border-left: 2px solid var(--theme-action-menu-item-side);
+    }
+
+    .panel-footer .btn-info {
+        background: var(--theme-action-menu-item-important-background);
+        color: var(--theme-action-menu-item-important-foreground);
+        border-left-color: var(--theme-action-menu-item-important-side);
+    }
+
+    .panel-footer .btn-info:hover {
+        background: var(--theme-action-menu-item-important-background-hover);
+        color: var(--theme-action-menu-item-important-foreground-hover);
+        border-left-color: var(--theme-action-menu-item-important-side-hover);
+    }
+
+    .panel-footer .btn-warning {
+        background: var(--theme-action-menu-item-background);
+        color: var(--theme-action-menu-item-foreground);
+    }
+
+    .panel-footer .btn-warning:hover {
+        background: var(--theme-action-menu-item-background-hover);
+        color: var(--theme-action-menu-item-foreground-hover);
+        border-left-color: var(--theme-action-menu-item-side-hover);
+    }
+}
+
+@-moz-document regexp(".*8\\.134\\.85\\.70/.*/submitpage\\.php.*") {
+
+    #broadcast {
+        display: none;
+    }
+
+    .jumbotron {
+        width: 100%;
+        padding: 1rem 0 0 !important;
+        margin-top: 7rem;
+        margin-bottom: 2rem;
+        box-shadow: none;
+        border-radius: 0 !important;
+        border: none !important;
+    }
+
+    #frmSolution {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        height: 50rem;
+        text-align: left;
+        font-size: 1rem;
+        font-weight: 700;
+        margin-top: 1rem;
+    }
+
+    #frmSolution > br {
+        display: none;
+    }
+
+    #frmSolution > pre {
+        order: -1;
+        height: 50rem;
+        margin-right: 1rem;
+        width: calc(100% - 260px - 1rem) !important;
+    }
+
+    #frmSolution > span.blue {
+        font-size: 1.5rem;
+        color: var(--theme-foreground);
+        margin-top: .1rem;
+    }
+
+    #frmSolution > span.blue:before {
+        content: "#";
+    }
+
+    #frmSolution > span#language_span {
+        display: flex;
+        flex-direction: column;
+        margin: 1rem 0;
+    }
+
+    #frmSolution > span#language_span > select {
+        cursor: pointer;
+        word-wrap: break-word;
+        line-height: 1em;
+        white-space: normal;
+        outline: 0;
+        transform: rotate(0deg);
+        min-width: 14em;
+        min-height: 2.71428571em;
+        background: #fff;
+        display: inline-block;
+        padding: .5em 3.2em .5em 1em;
+        color: rgba(0, 0, 0, .87);
+        box-shadow: none;
+        border: 1px solid rgba(34, 36, 38, .15);
+        border-radius: .28571429rem;
+        transition: box-shadow .1s ease, width .1s ease;
+        font-weight: 400;
+        margin-top: .5rem;
+    }
+
+    #frmSolution > .btn {
+        font-size: 1rem;
+        font-weight: 700;
+        color: var(--theme-action-menu-item-important-foreground) !important;
+        background-color: var(--theme-action-menu-item-important-background) !important;
+        border-color: var(--theme-action-menu-item-important-background) !important;
+        background-image: none;
+        text-shadow: none;
+        -webkit-box-shadow: none;
+        box-shadow: inset 0 0 0 0 rgb(34 36 38 / 15%);
+        outline: none !important;
+        transition: opacity .1s ease, background-color .1s ease, color .1s ease, box-shadow .1s ease, background .1s ease;
+        margin-top: .5rem;
+    }
+
+    #frmSolution > .btn:hover {
+        color: var(--theme-action-menu-item-important-foreground-hover) !important;
+        background-color: var(--theme-action-menu-item-important-background-hover) !important;
+        border-color: var(--theme-action-menu-item-important-background-hover) !important;
+        box-shadow: inset 0 0 0 1px transparent, inset 0 0 0 0 rgb(34 36 38 / 15%);
+        outline: none;
     }
 }
